# riccati

./: .gitignore  CMakeLists.txt  Info.txt  README.md  build.sh  main.cpp
!mat/2x2/: !log.txt  !output.txt
docs/: comparison.odt  dip.docx  preza.pptx  title_list.docx  todo.txt
docs/drawio/: acc_points.drawio  nystrem_block.drawio  resnet+usual.drawio  uml.drawio
functions/: func.cpp  func.h
methods/: methods.h  solver.cpp  solver.h
methods/adams/: adams.cpp  adams.h
methods/felberg/: felberg.cpp  felberg.h
methods/hemming/: hemming.cpp  hemming.h
methods/inglend/: inglend.cpp  inglend.h
methods/milna/: milna.cpp  milna.h
methods/nystrom/: nystrom.cpp  nystrom.h
methods/runge/: runge.cpp  runge.h
src/: CMakeLists.txt  main.cpp  solver.cpp  utils.cpp
src/core/: func.cpp  func.hpp  solver.cpp  solver.hpp
src/include/: fabric.hpp  methods.hpp  solver.hpp  utils.hpp
src/methods/: adams.cpp  adams.hpp  felberg.cpp  felberg.hpp  hemming.cpp  hemming.hpp  inglend.cpp  inglend.hpp  methods.hpp  milna.cpp  milna.hpp  nystrom.cpp  nystrom.hpp  runge.cpp  runge.hpp
